Make maxlength not affect initial values or scripted sets.  Bug 345267, r+sr=mats, a=dbaron